# composer

./: .clang-format  CMakeLists.txt  README.md  check_code_formatting.sh
.github/workflows/: build.yml
include/composer/: algorithm.hpp  arity_function.hpp  back_binding.hpp  composable_function.hpp  front_binding.hpp  functional.hpp  left_curry.hpp  ranges.hpp  right_curry.hpp  transform_args.hpp  tuple.hpp
tests/: CMakeLists.txt  test_algorithm.cpp  test_arity_function.cpp  test_back_binding.cpp  test_composable_function.cpp  test_front_binding.cpp  test_functional.cpp  test_left_curry.cpp  test_ranges.cpp  test_right_curry.cpp  test_transform_args.cpp  test_tuple.cpp  test_utils.hpp
